commit translated contents

--- a/articles/attestation/index.yml
+++ b/articles/attestation/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 07/20/2020
-  ms.openlocfilehash: d461fb946eeb7a0913162ec164f75b63101cfe97
-  ms.sourcegitcommit: 3af12dc5b0b3833acb5d591d0d5a398c926919c8
+  ms.openlocfilehash: 9740c315333d3f24e43a35b476243f323b6e3821
+  ms.sourcegitcommit: f5b8410738bee1381407786fcb9d3d3ab838d813
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/11/2021
-  ms.locfileid: "98070254"
+  ms.lasthandoff: 01/14/2021
+  ms.locfileid: "98209918"
 landingContent:
 - title: Microsoft Azure Attestation について
   linkLists:
@@ -27,12 +27,14 @@ landingContent:
   linkLists:
   - linkListType: deploy
     links:
-    - text: PowerShell のクイック スタート
-      url: quickstart-powershell.md
-    - text: CLI のクイックスタート
-      url: quickstart-azure-cli.md
     - text: ARM テンプレートのクイックスタート
       url: quickstart-template.md
+    - text: PowerShell のクイック スタート
+      url: quickstart-powershell.md
+    - text: ポータルのクイックスタート
+      url: quickstart-portal.md
+    - text: CLI のクイックスタート
+      url: quickstart-azure-cli.md
 - title: 概念
   linkLists:
   - linkListType: concept
