--- a/articles/azure-relay/TOC.yml
+++ b/articles/azure-relay/TOC.yml
@@ -32,7 +32,7 @@
       href: 'https://github.com/Azure/azure-relay/tree/master/samples/wcf-relay'
 - name: 概念
   items:
-    - name: Security
+    - name: セキュリティ
       items:
         - name: 認証と権限承認
           href: relay-authentication-and-authorization.md
@@ -65,7 +65,7 @@
               href: relay-hybrid-connections-node-ws-api-overview.md
     - name: セキュリティで保護
       items:
-        - name: IP ファイアウォールの構成 (プレビュー)
+        - name: IP ファイアウォールの構成
           href: ip-firewall-virtual-networks.md
         - name: プライベート エンドポイントの構成
           href: private-link-service.md
