--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -124,7 +124,7 @@
         - name: Kubernetes ネットワーク ポリシー
           href: kubernetes-network-policies.md
         - name: DDoS 保護
-          href: 'https://docs.microsoft.com/azure/ddos-protection/ddos-protection-overview'
+          href: ../ddos-protection/ddos-protection-overview.md
         - name: 仮想ネットワーク TAP
           href: virtual-network-tap-overview.md
         - name: Azure Policy によるセキュリティ制御
@@ -137,7 +137,7 @@
         - name: サブネットの委任
           href: subnet-delegation-overview.md
     - name: 従来のデプロイ
-      href: 'https://docs.microsoft.com/previous-versions/azure/virtual-network/virtual-network-ip-addresses-overview-classic'
+      href: /previous-versions/azure/virtual-network/virtual-network-ip-addresses-overview-classic
 - name: 操作方法ガイド
   items:
     - name: 計画と構成
@@ -165,7 +165,7 @@
             - name: Azure CLI
               href: tutorial-create-route-table-cli.md
             - name: Ansible
-              href: /azure/ansible/ansible-create-configure-route-table
+              href: /azure/developer/ansible/route-table-configure
             - name: ルート テーブルの管理
               href: manage-route-table.md
         - name: NIC の管理
@@ -199,11 +199,11 @@
             - name: VNet (Resource Manager) から VNet に (クラシック)
               href: ../vpn-gateway/vpn-gateway-connect-different-deployment-models-portal.md?toc=%2fazure%2fvirtual-network%2ftoc.json
             - name: VNet からオンプレミスのネットワークに (VPN)
-              href: ../vpn-gateway/vpn-gateway-howto-site-to-site-resource-manager-portal.md?toc=%2fazure%2fvirtual-network%2ftoc.json
+              href: ../vpn-gateway/tutorial-site-to-site-portal.md?toc=%2fazure%2fvirtual-network%2ftoc.json
             - name: VNet からオンプレミスのネットワークに (ExpressRoute)
               href: ../expressroute/expressroute-howto-linkvnet-portal-resource-manager.md?toc=%2fazure%2fvirtual-network%2ftoc.json
             - name: 高可用性ハイブリッド ネットワーク アーキテクチャ
-              href: ../guidance/guidance-hybrid-network-expressroute-vpn-failover.md?toc=%2fazure%2fvirtual-network%2ftoc.json
+              href: /azure/architecture/reference-architectures/hybrid-networking/expressroute-vpn-failover?toc=%2fazure%2fvirtual-network%2ftoc.json
         - name: 仮想ネットワーク TAP を構成する
           href: tutorial-tap-virtual-network-cli.md
         - name: コンテナー ネットワークのデプロイ
@@ -311,9 +311,9 @@
                 - name: Azure CLI
                   href: virtual-network-service-endpoint-policies-cli.md
         - name: DDoS 保護の管理
-          href: 'https://docs.microsoft.com/azure/ddos-protection/manage-ddos-protection'
+          href: ../ddos-protection/manage-ddos-protection.md
         - name: DDoS Protection Standard へのパートナーのオンボード
-          href: 'https://docs.microsoft.com/azure/ddos-protection/ddos-protection-partner-onboarding'
+          href: ../ddos-protection/ddos-protection-partner-onboarding.md
         - name: ネットワーク セキュリティ グループの管理
           href: manage-network-security-group.md
         - name: セキュリティのシナリオ
@@ -321,7 +321,7 @@
             - name: 仮想アプライアンスでネットワークをセキュリティで保護する
               href: virtual-network-scenario-udr-gw-nva.md
             - name: Azure とインターネットの間の DMZ
-              href: ../guidance/guidance-iaas-ra-secure-vnet-dmz.md?toc=%2fazure%2fvirtual-network%2ftoc.json
+              href: /azure/architecture/reference-architectures/dmz/secure-vnet-dmz?toc=%2fazure%2fvirtual-network%2ftoc.json
     - name: VM ネットワーク
       items:
         - name: VM の作成 - 静的パブリック IP
@@ -435,7 +435,7 @@
         - name: Azure VM の接続に関する問題のトラブルシューティング
           href: troubleshoot-vm-connectivity.md
     - name: 従来のデプロイ
-      href: 'https://docs.microsoft.com/previous-versions/azure/virtual-network/create-virtual-network-classic'
+      href: /previous-versions/azure/virtual-network/create-virtual-network-classic
 - name: リファレンス
   items:
     - name: Azure CLI
@@ -447,7 +447,7 @@
     - name: Java
       href: /java/api/
     - name: Node.js
-      href: 'https://docs.microsoft.com/javascript/azure#azure-sdk'
+      href: /javascript/azure#azure-sdk
     - name: Python
       href: 'https://azure.microsoft.com/develop/python/'
     - name: REST
@@ -468,7 +468,7 @@
     - name: ネットワークのブログ
       href: 'https://azure.microsoft.com/blog/topics/networking'
     - name: ネットワークに関する Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-virtual-network.html'
+      href: /answers/topics/azure-virtual-network.html
     - name: ネットワークに関するフィードバック
       href: 'https://feedback.azure.com/forums/217313-networking?category_id=77469'
     - name: 価格
