--- a/articles/networking/TOC.yml
+++ b/articles/networking/TOC.yml
@@ -11,13 +11,13 @@
         - name: 複数のネットワーク パスを使用した非対称ルーティング
           href: ../expressroute/expressroute-asymmetric-routing.md?toc=%2fazure%2fnetworking%2ftoc.json
         - name: セキュリティで保護されたネットワークの設計
-          href: ../best-practices-network-security.md?toc=%2fazure%2fnetworking%2ftoc.json
+          href: /azure/cloud-adoption-framework/reference/networking-vdc?toc=%2fazure%2fnetworking%2ftoc.json
         - name: ハブスポーク トポロジ
-          href: 'https://docs.microsoft.com/azure/architecture/reference-architectures/hybrid-networking/hub-spoke'
+          href: /azure/architecture/reference-architectures/hybrid-networking/hub-spoke
         - name: ネットワーク セキュリティのベスト プラクティス
           href: ../security/fundamentals/network-best-practices.md?toc=%2fazure%2fnetworking%2ftoc.json
         - name: 高可用性ネットワーク仮想アプライアンス
-          href: 'https://docs.microsoft.com/azure/architecture/reference-architectures/dmz/nva-ha'
+          href: /azure/architecture/reference-architectures/dmz/nva-ha
         - name: 負荷分散方法の組み合わせ
           href: ../traffic-manager/traffic-manager-load-balancing-azure.md?toc=%2fazure%2fnetworking%2ftoc.json
         - name: Azure DNS と Traffic Manager を使用したディザスター リカバリー
@@ -79,27 +79,27 @@
     - name: インターネット接続
       items:
         - name: ネットワーク負荷分散パブリック サーバー
-          href: ../load-balancer/load-balancer-get-started-internet-portal.md?toc=%2fazure%2fnetworking%2ftoc.json
+          href: ../load-balancer/quickstart-load-balancer-standard-public-portal.md?toc=%2fazure%2fnetworking%2ftoc.json
         - name: アプリケーション負荷分散パブリック サーバー
           href: ../application-gateway/quick-create-portal.md?toc=%2fazure%2fnetworking%2ftoc.json
         - name: Web アプリケーションの保護
-          href: ../application-gateway/application-gateway-web-application-firewall-portal.md?toc=%2fazure%2fnetworking%2ftoc.json
+          href: ../web-application-firewall/ag/application-gateway-web-application-firewall-portal.md?toc=%2fazure%2fnetworking%2ftoc.json
         - name: 場所に基づいた負荷分散
           href: ../traffic-manager/traffic-manager-configure-geographic-routing-method.md?toc=%2fazure%2fnetworking%2ftoc.json
     - name: 内部接続
       items:
         - name: ネットワーク負荷分散プライベート サーバー
-          href: ../load-balancer/load-balancer-get-started-ilb-arm-portal.md?toc=%2fazure%2fnetworking%2ftoc.json
+          href: ../load-balancer/quickstart-load-balancer-standard-internal-portal.md?toc=%2fazure%2fnetworking%2ftoc.json
         - name: アプリケーション負荷分散プライベート サーバー
           href: ../application-gateway/application-gateway-ilb-arm.md?toc=%2fazure%2fnetworking%2ftoc.json
         - name: 仮想ネットワークへの接続 (同じ場所)
-          href: ../virtual-network/virtual-networks-create-vnetpeering-arm-portal.md?toc=%2fazure%2fnetworking%2ftoc.json
+          href: ../virtual-network/tutorial-connect-virtual-networks-portal.md?toc=%2fazure%2fnetworking%2ftoc.json
         - name: 仮想ネットワークへの接続 (異なる場所)
           href: ../vpn-gateway/vpn-gateway-howto-vnet-vnet-resource-manager-portal.md?toc=%2fazure%2fnetworking%2ftoc.json
     - name: クロスプレミス接続
       items:
         - name: サイト間 VPN 接続を作成する (IPsec および IKE)
-          href: ../vpn-gateway/vpn-gateway-howto-site-to-site-resource-manager-portal.md?toc=%2fazure%2fnetworking%2ftoc.json
+          href: ../vpn-gateway/tutorial-site-to-site-portal.md?toc=%2fazure%2fnetworking%2ftoc.json
         - name: P2S VPN 接続を作成する (SSTP と証明書)
           href: ../vpn-gateway/vpn-gateway-howto-point-to-site-resource-manager-portal.md?toc=%2fazure%2fnetworking%2ftoc.json
         - name: 専用プライベート接続を作成する (ExpressRoute)
@@ -115,7 +115,7 @@
         - name: Azure の上限に対するリソースの使用量の確認
           href: check-usage-against-limits.md
         - name: ネットワーク トポロジの表示
-          href: ../network-watcher/network-watcher-topology-powershell.md?toc=%2fazure%2fnetworking%2ftoc.json
+          href: ../network-watcher/view-network-topology.md?toc=%2fazure%2fnetworking%2ftoc.json
     - name: サンプルのスクリプト
       items:
         - name: Azure CLI
@@ -131,22 +131,22 @@
 - name: リファレンス
   items:
     - name: Azure CLI
-      href: 'https://docs.microsoft.com/cli/azure/network'
+      href: /cli/azure/network
     - name: Azure PowerShell
-      href: 'https://docs.microsoft.com/powershell/module/az.network/'
+      href: /powershell/module/az.network/
     - name: .NET
-      href: 'https://docs.microsoft.com/dotnet/api/microsoft.azure.management.network?view=azuremgmtnetwork-9.1.0-preview'
+      href: /dotnet/api/microsoft.azure.management.network?view=azuremgmtnetwork-9.1.0-preview
     - name: Node.js
       href: 'https://azure.microsoft.com/develop/nodejs/#azure-sdk'
     - name: REST
-      href: 'https://msdn.microsoft.com/library/mt163658.aspx'
+      href: /rest/api/virtual-network/
     - name: Azure Policy の組み込み
       displayName: 'samples, policies, definitions'
       href: ./policy-reference.md
 - name: リソース
   items:
     - name: テンプレートの作成
-      href: /azure/azure-resource-manager/resource-group-authoring-templates?toc=%2fazure%2fnetworking%2ftoc.json
+      href: ../azure-resource-manager/templates/template-syntax.md?toc=%2fazure%2fnetworking%2ftoc.json
     - name: プロバイダー
       href: networking-partners-msp.md
     - name: Azure のロードマップ
