--- a/articles/networking/index.yml
+++ b/articles/networking/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.author: kumud
   manager: mtillman
   ms.date: 09/28/2020
-  ms.openlocfilehash: efc78307a4b03c9b5a7546dd899f83b0eed76457
-  ms.sourcegitcommit: 31cfd3782a448068c0ff1105abe06035ee7b672a
+  ms.openlocfilehash: 0f0536c259bb8b4168ab5fcf3e05016a281b05d5
+  ms.sourcegitcommit: c7153bb48ce003a158e83a1174e1ee7e4b1a5461
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/10/2021
-  ms.locfileid: "98059740"
+  ms.lasthandoff: 01/15/2021
+  ms.locfileid: "98233952"
 highlightedContent:
   items:
   - title: Azure ネットワークとは
@@ -28,10 +28,10 @@ highlightedContent:
     url: https://azure.microsoft.com/updates/?category=networking
   - title: Azure の負荷分散オプション
     itemType: architecture
-    url: https://docs.microsoft.com/azure/architecture/guide/technology-choices/load-balancing-overview
+    url: /azure/architecture/guide/technology-choices/load-balancing-overview
   - title: Azure のハブスポーク ネットワーク トポロジ
     itemType: architecture
-    url: https://docs.microsoft.com/azure/architecture/reference-architectures/hybrid-networking/hub-spoke
+    url: /azure/architecture/reference-architectures/hybrid-networking/hub-spoke
   - title: Azure Orbital とは
     itemType: concept
     url: azure-orbital-overview.md
@@ -62,7 +62,7 @@ conceptualContent:
     - url: ../vpn-gateway/vpn-gateway-about-vpngateways.md
       itemType: overview
       text: Azure VPN Gateway とは
-    - url: ../vpn-gateway/vpn-gateway-howto-site-to-site-resource-manager-portal.md
+    - url: ../vpn-gateway/tutorial-site-to-site-portal.md
       itemType: tutorial
       text: サイト間接続
     - url: ../vpn-gateway/vpn-gateway-howto-point-to-site-resource-manager-portal.md
@@ -141,7 +141,7 @@ conceptualContent:
       text: Traffic Manager の機能低下状態のトラブルシューティング
     footerLink:
       url: ../traffic-manager/index.yml
-      text: さらに詳しく
+      text: 詳細情報
   - title: Web アプリケーション ロード バランサー
     links:
     - url: ../application-gateway/overview.md
@@ -189,7 +189,7 @@ conceptualContent:
       text: VM との間のネットワーク トラフィック フローのログを記録する
     footerLink:
       url: ../network-watcher/index.yml
-      text: さらに詳しく
+      text: 詳細情報
   - title: ネットワーク ファイアウォール
     links:
     - url: ../firewall/overview.md
@@ -209,7 +209,7 @@ conceptualContent:
     - url: ../bastion/bastion-overview.md
       itemType: overview
       text: Azure Bastion とは
-    - url: ../bastion/bastion-create-host-portal.md
+    - url: ../bastion/tutorial-create-host-portal.md
       itemType: how-to-guide
       text: Azure Bastion ホストを作成する
     - url: ../bastion/troubleshoot.md
@@ -333,10 +333,10 @@ additionalContent:
   - items:
     - title: Azure ネットワーク用の Azure PowerShell コマンド
       summary: Azure ネットワークのコマンドレットについて説明します。
-      url: https://docs.microsoft.com/en-us/powershell/module/az.network/?view=azps-3.5.0#networking
+      url: /powershell/module/az.network/?view=azps-3.5.0#networking
     - title: Azure ネットワーク用の Azure CLI コマンド
       summary: CLI リファレンスで Azure ネットワークのコマンドを確認してください。
-      url: https://docs.microsoft.com/en-us/cli/azure/network?view=azure-cli-latest
+      url: /cli/azure/network?view=azure-cli-latest
     - title: Azure ネットワークのブログ
       summary: Azure ネットワークの最新のブログをご覧ください。
       url: https://azure.microsoft.com/blog/topics/networking/
